samples/_failures_safe/1761296066_e37748_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_606f6d80.c: In function ‘main’:
./samples/SAFE/__tmp_606f6d80.c:142:26: error: missing terminating " character
  142 |         if (strcmp(line, "
      |                          ^
./samples/SAFE/__tmp_606f6d80.c:142:9: error: expected expression at end of input
  142 |         if (strcmp(line, "
      |         ^~
./samples/SAFE/__tmp_606f6d80.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_606f6d80.c:142:9: error: expected declaration or statement at end of input
